// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate route utils: to javascript only: mockImplementation: javascript 1`] = `
"export { default as AppRoutes } from './routes.json';
\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.route = void 0;
/**
 * build a complete path with injected arguments
 * @param path {string} based path
 * @param args {string[]} arguments to inject
 */
function route(path) {
    var _a;
    var args = [];
    for (var _i = 1; _i < arguments.length; _i++) {
        args[_i - 1] = arguments[_i];
    }
    var params = (_a = path.match(/\\\\[[a-zA-Z_-]+\\\\]/g)) !== null && _a !== void 0 ? _a : [];
    for (var i in params) {
        path = path.replace(params[i], args[i]);
    }
    return path;
}
exports.route = route;

"
`;

exports[`generate route utils: with default options: generateRouteUtil: default 1`] = `
"export { default as AppRoutes } from './routes.json';
/**
 * build a complete path with injected arguments
 * @param path {string} based path
 * @param args {string[]} arguments to inject
 */
export function route(path: string, ...args: string[]): string {
  const params = path.match(/\\\\[[a-zA-Z_-]+\\\\]/g) ?? [];
  for (const i in params) {
    path = path.replace(params[i], args[i]);
  }
  return path;
}

"
`;
